resources/assets/stylesheets/scss/courseware.scss
/* ... */
/* * * * * * *
t r e e  e n d
* * * * * * * */

/* * * * * * * * * * * * * * *
c o l l a p s i b l e   b o x
* * * * * * * * * * * * * * */
.cw-collapsible {

    border: solid thin $content-color-40;
    margin-bottom: -1px;
    height: 34px;

    &.cw-collapsible-open {
        height: unset;
    }

    .cw-collapsible-title {
        @include background-icon(arr_1right, clickable);
        background-position: 6px center;
        background-repeat: no-repeat;
        background-color: $content-color-20;
        padding: 0.5em 2em;
        margin: 0;
        font-weight: 600;
        color: $base-color;
        cursor: pointer;

        &.cw-collapsible-open {
            @include background-icon(arr_1down, clickable);
        }

        img {
            vertical-align: middle;
        }
    }

    .cw-collapsible-content {
        padding: 0;
        visibility: hidden;
        height: 0;
        &.cw-collapsible-content-open {
            visibility: visible;
            height: unset;
            padding: 10px;
        }
    }
}

form .cw-collapsible .cw-collapsible-content.cw-collapsible-content-open {
    padding: unset;
    label {
        margin: 1.5ex;
    }
}

/* * * * * * * * * * * * * * * * * *
c o l l a p s i b l e  b o x  e n d
* * * * * * * * * * * * * * * * * */

/* * * *
t a b s
* * * */
$icons: (
    accept,
    add,
    add-circle,
    admin,
    aladdin,
    arr_1down,
    arr_1left,
    arr_1right,
    arr_1up,
    arr_2down,
    arr_2left,
    arr_2right,
    arr_2up,
    audio,
    audio3,
    billboard,
    block-canvas,
    block-comparison,
    block-eyecatcher,
    block-gallery,
    block-gallery2,
    block-imagemap,
    brainstorm,
    campusnavi,
    chat2,
    code,
    community2,
    computer,
    consultation,
    content,
    courseware,
    crown,
    date-single,
    decline,
    decline-circle,
    doctoral_cap,
    download,
    dropbox,
    edit,
    exclaim,
    exclaim-circle,
    export,
    favorite,
    filter,
    globe,
    graph,
    group2,
    group3,
    group4,
    home2,
    info,
    info-circle,
    install,
    institute,
    key,
    knife,
    learnmodule,
    lightbulb,
    lightbulb2,
    link2,
    link3,
    link-extern,
    link-intern,
    literature,
    lock-locked,
    lock-unlocked,
    mail2,
    medal,
    metro,
    microphone,
    module,
    network,
    notification,
    notification2,
    opencast,
    outer-space,
    permalink,
    person,
    phone,
    picture,
    place,
    plugin,
    question,
    question-circle,
    ranking,
    remove,
    remove-circle,
    resources,
    roles,
    schedule2,
    search,
    settings,
    span-empty,
    span-1quarter,
    span-2quarter,
    span-3quarter,
    span-full,
    spiral,
    sport,
    staple,
    star,
    star-empty,
    star-halffull,
    test,
    tools,
    topic,
    ufo,
    video2,
    visibility-visible,
    wizard
);

.cw-tabs-nav {
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    padding: 0;
    margin: 0;
    border: solid thin $content-color-40;
    border-bottom: none;

    button {
        background-color: $white;
        border: none;
        padding: 1em 0 4px 0;
        margin: 0 7px 0 21px;
        color: $base-color;
        cursor: pointer;
        text-align: center;
        flex-grow: 1;
        max-width: max-content;

        &::after {
            display: block;
            margin-top: 4px;
            margin-bottom: -5px;
            margin-left: -14px;
            width: calc(100% + 28px);
            content: '';
            border-bottom: solid 3px $dark-gray-color-75;
            transform: scaleX(0);
            transition: transform 300ms ease-in-out;
        }

        &.is-active,
        &:hover {
            color: $black;
            &:after {
                transform: scaleX(1);
            }
        }

        @each $icon in $icons {
            &.cw-tabs-nav-icon-text-#{$icon} {
                &::before {
                    @include background-icon($icon);
                    background-repeat: no-repeat;
                    background-position: left bottom;

                    display: inline-block;
                    height: 16px;
                    width: 16px;
                    margin-bottom: -2px;
                    padding-left: 4px;
                    content: '';
                }

            }
            &.is-active.cw-tabs-nav-icon-text-#{$icon},
            &.cw-tabs-nav-icon-text-#{$icon}:hover {
                &::before {
                    @include background-icon($icon, info);
                }
            }
        };
        @each $icon in $icons {
            &.cw-tabs-nav-icon-solo-#{$icon} {
                &::before {
                    display: inline-block;
                    height: 24px;
                    width: 24px;
                    content: '';

                    @include background-icon($icon, clickable, 24);
                    background-repeat: no-repeat;
                    background-position: center;
                }
            }
            &.is-active.cw-tabs-nav-icon-solo-#{$icon},
            &.cw-tabs-nav-icon-solo-#{$icon}:hover {
                &::before {
                    @include background-icon($icon, info);
                }
            }
        };

    }

    &:hover li {
        &.is-active::after {
            transform: scaleX(0);
        }
        &:hover::after {
            transform: scaleX(1);
        }
    }
}
.cw-tabs-content {
    border: solid thin $content-color-40;
    padding: 4px;
}
.cw-block-wrapper-active {
    .cw-tabs-content {
        padding: 14px 0;
    }
}
/* ... */

